methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:12: error: not found: value baisseBrosee
  baisseBrosee()
  ^